--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,12 @@ body {
     color: #f1f1f1;
 }
 
+.logo {
+    // height: 100px;
+    line-height: 100px;
+    padding: 0 35px;
+}
+
 .nav-links {
     height: 100px;
     line-height: 100px;
@@ -37,7 +43,7 @@ body {
 }
 
 .hook {
-    padding: 55px 55px 0 55px;
+    padding: 70px 35px 0 35px;
 }
 
 .hook h1 {
@@ -57,6 +63,11 @@ body {
 .block img {
     display: inline-block;
     max-height: 600px;
+}
+
+.block-sm {
+    min-height: 300px;
+    padding: 35px 0;
 }
 
 .black {
