--- a/static/less/sidebar.less
+++ b/static/less/sidebar.less
@@ -35,4 +35,16 @@
             }
         }
     }    
+
+    .about {
+        position: absolute;
+        bottom: 5px;
+        width: 100%;
+        text-align: center;
+
+        a {
+            color: #02435A;
+            font-size: 16px;
+        }
+    }
 }
